--- a/aircnc/build.gradle
+++ b/aircnc/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'com.google.guava:guava:31.1-jre'
+	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'com.auth0:java-jwt:3.19.2'
 
 	compileOnly 'org.projectlombok:lombok'
