--- a/aircnc/src/main/resources/application.yml
+++ b/aircnc/src/main/resources/application.yml
@@ -15,3 +15,5 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
+room-photos:
+  path: src/main/resources/room-photos/dest/
