--- a/aircnc/.gitignore
+++ b/aircnc/.gitignore
@@ -173,3 +173,6 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,macos,windows,intellij+all
+
+### 로컬 숙소 사진 등록 테스트 결과
+src/test/resources/room-photos-dest
