--- a/aircnc/build.gradle
+++ b/aircnc/build.gradle
@@ -26,6 +26,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.auth0:java-jwt:3.19.2'
@@ -37,6 +38,8 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+
 }
 
 tasks.named('test') {
