--- a/aircnc/src/main/resources/application.yaml
+++ b/aircnc/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
