--- a/aircnc/src/test/resources/application.yml
+++ b/aircnc/src/test/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
