--- a/aircnc/src/main/resources/application.yaml
+++ b/aircnc/src/main/resources/application.yaml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/aircnc?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
-    password: 1234
+    username: gurudev
+    password: pass123
 
   jpa:
     show-sql: true
