--- a/aircnc/.gitignore
+++ b/aircnc/.gitignore
@@ -175,4 +175,4 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/gradle,macos,windows,intellij+all
 
 ### 로컬 숙소 사진 등록 테스트 결과
-src/test/resources/room-photos-dest/**
+src/test/resources/room-photos-dest/*.jpeg
