--- a/aircnc/src/test/resources/application.yml
+++ b/aircnc/src/test/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/aircnc?serverTimezone=UTC&characterEncoding=UTF-8
-    username: gurudev
-    password: pass123
+    username: ${db.username:gurudev}
+    password: ${db.password:pass123}
 
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: true
