--- a/aircnc/build.gradle
+++ b/aircnc/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.auth0:java-jwt:3.19.2'
 
+    implementation 'org.flywaydb:flyway-mysql:8.5.12'
+
     compileOnly 'org.projectlombok:lombok'
 
     runtimeOnly 'mysql:mysql-connector-java'
