--- a/aircnc/src/main/resources/application-prod.yaml
+++ b/aircnc/src/main/resources/application-prod.yaml
@@ -14,6 +14,25 @@ spring:
         format_sql: false
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
+  mail:
+    default-encoding: UTF-8
+    port: 465
+    protocol: smtp
+    host: "smtp.gmail.com"
+    username: ${mail.username}
+    password: ${mail.password}
+    properties:
+      mail:
+        smtp:
+          socketFactory:
+            port: 465
+            fallback: false
+            class: javax.net.ssl.SSLSocketFactory
+          auth: true
+          starttls:
+            enabled: true
+            required: true
+
 jwt:
   issuer: "gurudev"
   client-secret: ${jwt.client.secret:secret}
