feat: Thymeleaf를 이용한 메시지 작성 [AIR-111]  - 간단한 이메일 기능 테스트 코드 추가

--- a/aircnc/src/main/resources/application-prod.yaml
+++ b/aircnc/src/main/resources/application-prod.yaml
@@ -33,6 +33,10 @@ spring:
             enabled: true
             required: true
 
+  thymeleaf:
+    prefix: classpath:/mail-templates/
+    cache: false
+
 jwt:
   issuer: "gurudev"
   client-secret: ${jwt.client.secret:secret}
