--- a/aircnc/src/main/resources/application.yaml
+++ b/aircnc/src/main/resources/application.yaml
@@ -33,6 +33,10 @@ spring:
             enabled: true
             required: true
 
+  thymeleaf:
+    prefix: classpath:/mail-templates/
+    cache: false
+
 jwt:
   issuer: "gurudev"
   client-secret: ${jwt.client.secret:secret}
@@ -40,5 +44,6 @@ jwt:
 
 room-photos:
   path: src/main/resources/room-photos/
+
 
 
