--- a/aircnc/src/main/resources/application.yaml
+++ b/aircnc/src/main/resources/application.yaml
@@ -14,6 +14,19 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
+  thymeleaf:
+    prefix: classpath:/mail-templates/
+    cache: false
+
+infrastructure:
+  aws:
+    s3:
+      region: ap-northeast-2
+      accessKey: ${aws.accessKey}
+      secretKey: ${aws.secretKey}
+      url: https://s3.ap-northeast-2.amazonaws.com
+      bucketName: dev-aircnc
+
   mail:
     default-encoding: UTF-8
     port: 465
@@ -33,20 +46,8 @@ spring:
             enabled: true
             required: true
 
-  thymeleaf:
-    prefix: classpath:/mail-templates/
-    cache: false
-
-jwt:
-  issuer: "gurudev"
-  client-secret: ${jwt.client.secret:secret}
-  expiry-seconds: 1800
-
-cloud:
-  aws:
-    s3:
-      region: ap-northeast-2
-      accessKey: ${aws.accessKey}
-      secretKey: ${aws.secretKey}
-      url: https://s3.ap-northeast-2.amazonaws.com
-      bucketName: dev-aircnc
+  security:
+    jwt:
+      issuer: "gurudev"
+      client-secret: ${jwt.secret}
+      expiry-seconds: 1800
