--- a/aircnc/src/test/resources/application.yml
+++ b/aircnc/src/test/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
-cloud:
+infrastructure:
   aws:
     s3:
       region: ap-northeast-2
@@ -22,3 +22,28 @@ cloud:
       secretKey: ${aws.secretKey}
       url: https://s3.ap-northeast-2.amazonaws.com
       bucketName: dev-aircnc
+
+  mail:
+    default-encoding: UTF-8
+    port: 465
+    protocol: smtp
+    host: "smtp.gmail.com"
+    username: ${mail.username}
+    password: ${mail.password}
+    properties:
+      mail:
+        smtp:
+          socketFactory:
+            port: 465
+            fallback: false
+            class: javax.net.ssl.SSLSocketFactory
+          auth: true
+          starttls:
+            enabled: true
+            required: true
+
+  security:
+    jwt:
+      issuer: "gurudev"
+      client-secret: ${jwt.secret}
+      expiry-seconds: 1800
