--- a/aircnc/.gitignore
+++ b/aircnc/.gitignore
@@ -172,4 +172,6 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# log files ignore
+logs/*.log
 # End of https://www.toptal.com/developers/gitignore/api/gradle,macos,windows,intellij+all
